# beauty-bot

./: .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.host-nginx.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0001_initial_schema.py  0002_master_settings_client_notes.py  0003_master_address.py  0004_bot_hub_schema.py  0005_drop_funnels_legacy.py  0006_master_reminder_config.py  0007_break_skip_dates.py  0008_service_addons.py  0009_conversation_flow_state.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/bot/: __init__.py  dispatcher.py
backend/app/core/: config.py  db.py  redis.py  security.py
backend/app/llm/: __init__.py  base.py  deepseek.py  factory.py  kie.py
backend/app/models/: __init__.py  base.py  booking.py  bot_settings.py  business_connection.py  client.py  conversation.py  enums.py  funnel.py  insight.py  knowledge_base.py  master.py  payment.py  portfolio.py  (+8 more)
backend/scripts/: audit_bot.py  audit_modes.py  bench_long_history.py  compare_llm.py  preflight.py  seed_test_master.py  trigger_worker.py
backend/tests/: conftest.py  test_api_endpoints.py  test_billing.py  test_bookings.py  test_business_message_edges.py  test_e2e.py  test_funnels.py  test_health.py  test_llm.py  test_me.py  test_security.py  test_segments_insights_portfolio.py  test_services_api.py  test_slots.py  test_validate_within_schedule.py  test_webhook.py
(+165 files in other folders)
